Basic html &css framework

--- a/index.html
+++ b/index.html
@@ -2,14 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <title>Starfits</title>
+    <meta name="description" content="Workout to do list">
+    <meta name="author" content="Lu Li, Jia Wen Wu">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link rel="stylesheet" href="css/reset.css"> -->
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+
+    <header>
+      <div class="logo">Starfits</div>
+      <h1>Starfits</h1>
+      <div class="wrapper">
+        <div class="menu">Menu</div>
+        <div class="to_do_list">To Do List</div>
+        <div class="calender">Calender</div>
+      </div>
+    </header>
 
 
 
