--- a/index.html
+++ b/index.html
@@ -12,11 +12,21 @@
   <body>
 
     <header>
-      <div class="logo">Starfits</div>
+      <div class="logo">Starfits Logo</div>
       <h1>Starfits</h1>
       <div class="wrapper">
         <div class="menu">Menu</div>
-        <div class="to_do_list">To Do List</div>
+        <div class="to_do_list">
+          <h2>To Do List</h2>
+          <textarea rows= "2" cols="30"></textarea>
+          <button>add</button>
+          <ul>
+          <li>Swimming 30 mins</li>
+          <li>Jogging 30 mins</li>
+          <li>Play basketball 30 mins</li>
+          <li>Push up 10 mins</li>
+        </ul>
+        </div>
         <div class="calender">
           <h2>Calender</h2>
           <div class="month">      
