--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
       <div class="logo">Starfits Logo</div>
       <h1>Starfits</h1>
       <div class="wrapper">
-        <div class="menu">Menu</div>
+        <div class="menu">
+          <h2>Menu</h2>
+          <ul>
+            <li><a href=".../today.html">Today's Task</a></li>
+            <li><a href=".../today.html">Weekly Summary</a></li>
+          </ul>
+        </div>
         <div class="to_do_list">
           <h2>To Do List</h2>
           <textarea rows= "2" cols="30"></textarea>
