hyperlink error fixed

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="menu">
           <h2>Menu</h2>
           <ul>
-            <li><a href=".../today.html">Today's Task</a></li>
-            <li><a href=".../today.html">Weekly Summary</a></li>
+            <li><a href="today.html">Today's Task</a></li>
+            <li><a href="weekly.html">Weekly Summary</a></li>
           </ul>
         </div>
         <div class="to_do_list">
