weekly Summary prototype

--- a/weekly.html
+++ b/weekly.html
@@ -15,10 +15,39 @@
       <div class="logo">Starfits Logo</div>
       <h1>Starfits Weekly Summary</h1>
       <div class="wrapper">
-        <div class="menu">
-          <h2>Menu</h2>
+        <div class="goals">
+          <h2>Goals</h2>
+          <div class="goal_small">
+            <img src="img/swimming.jpg" alt="Swimming" width="500">
+            <p>Swimming 30 mins</p>
+          </div>
+          <div class="goal_small">
+            <img src="img/Jogging.jpg" alt="Jogging" width="500">
+            <p>Jogging 30 mins</p>
+          </div>
         </div>
-        <div class="to_do_list">
+        <div class="in_progress">
+          <h2>In Progress</h2>
+          <div class="goal_small">
+            <ul>
+            <li><p>Swimming 30 mins</p></li>
+            <span>Swimming at school's gym for 30mins after class.</span>
+          </ul>
+          </div>
+          <div class="goal_small">
+            <ul>
+            <li><p>Jogging 30 mins</p></li>
+            <Span>Jogging with Lu for 30 mins.</Span>
+            <span></span>
+          </ul>
+          </div>
+        </div>
+        <div class="completed">
+          <h2>Completed</h2>
+          <div class="goal_small">
+            <img src="img/basketball.jpg" alt="basketball" width="500">
+            <p>&#128512;Playing basketball for 40 mins</p>
+          </div>
         </div>
       </div>
     </header>
