--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
       <div class="logo">Starfits Logo</div>
       <h1>Starfits</h1>
       <div class="wrapper">
-        <div class="menu">Menu</div>
+        <div class="menu">
+          <h2>Menu</h2>
+          <a href="today_task.html"><li>Today Task</li></a>
+          <a href="weekly_task_lu.html"><li>Weekly Task</li></a>
+          <a href=""><li>Monthly Task</li></a>
+        </div>
         <div class="to_do_list">
           <h2>To Do List</h2>
           <textarea rows= "2" cols="30"></textarea>
