--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header>
       <div class="logo">Starfits Logo</div>
-      <h1>Starfits</h1>
+      <h1 class="algin-center"> Starfits </h1>
       <div class="wrapper">
         <div class="menu">
           <h2>Menu</h2>
