--- a/today_task.html
+++ b/today_task.html
@@ -20,9 +20,11 @@
           <div class="today_task_list">
             <h2 class="algin-center">Today Task List</h2>
             <div class="task-table">
-              <li>Swimming            09:00 - 09:30</li>
-              <li>Jogging             09:45 - 10:15</li>
-              <li>Play basketball     12:30 - 13:00</li>
+              <ol>
+                <li class="task"><label><input type="checkbox" name="task">Swimming  09:00 - 09:30</label></li>
+                <li class="task complete"><label><input type="checkbox" name="task" checked>Jogging  09:45 - 10:15<label></li>
+                <li class="task"><label><input type="checkbox" name="task">Play basketball 12:30 - 13:00 </label></li>
+              </ol>
             </div>
 
           </div>
