--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         </div>
         <div class="to_do_list">
           <h2>To Do List</h2>
-          <textarea rows= "2" cols="30"></textarea>
-          <button>add</button>
-          <ul>
+          <input type="text" name="task" id="task">
+          <button type="button" name="button" id="add">Add</button>
+          <ul id="allTask">
           <li>Swimming 30 mins</li>
           <li>Jogging 30 mins</li>
           <li>Play basketball 30 mins</li>
