create add task function by using map and array

--- a/index.html
+++ b/index.html
@@ -21,17 +21,19 @@
           <a href="weekly_task_lu.html"><li>Weekly Task</li></a>
           <a href="monthly.html"><li>Monthly Task</li></a>
         </div>
+
         <div class="to_do_list">
           <h2>To Do List</h2>
-          <input type="text" name="task" id="task">
-          <button type="button" name="button" id="add">Add</button>
-          <ul id="allTask">
-          <li>Swimming 30 mins</li>
-          <li>Jogging 30 mins</li>
-          <li>Play basketball 30 mins</li>
-          <li>Push up 10 mins</li>
-        </ul>
+          <ol id="alltasks">
+            
+          </ol>
+          <form id="newtask">
+            <label>New task:</label>
+            <input type="text" name="task" id="task">
+            <button type="button" name="button" id="add">Add</button>
+          </form>
         </div>
+
         <div class="calender">
           <h2>Calender</h2>
           <div class="month">
